重构程序配置模块